public_html/style/style.css
img{
	height: 20px;
	width: 200px;
}
.height-80{
	min-height: 80vh;

}
#react{
	color: #00D2F8;
}
.navbar{background-color:#1C2331}


#envelope{
	margin-left: 20px;
}
#css{
	color: #4c4cea;
}
#js,#java{
	color: red;
}
#html5{
	color: #d94c19;
}
#php,#git,#mysql{
	color: mediumpurple;

}

.title-underline{
	height: 5px;
	width: 320px;
	margin-left: 200px;
}
.height{

	height: 60vh;
}
body{font-family: 'Arvo', serif;}

.skills-underline{
	height: 3px;
	width: 200px;
	margin:0 auto;

}
.contact-pic{
	background: url("../images/h2o.jpg")center/cover no-repeat fixed;
}
.height{
	min-height: 80vh;

}

.foot{
	min-height: 10vh;
	display: flex;
	justify-content: center;
}

input[type=text],textarea{
	width: 50%; /* Full width */
	border: 1px solid #ccc; /* Gray border */
	border-radius: 4px; /* Rounded borders */
	padding-left: 2em;
	padding-bottom: 0.5em;
	padding-top: 1em;
	margin: 20px 12px;
	height: 5%;
	}

#button{
	text-align: center;
	display: flex;
	justify-self: left;
	margin-left: 18px;
	width: 100px;
	padding-left: 25px;
}
#nav-bar{
	color: #cccccc;
	/*background: transparent;*/
	opacity: 0.5;
}

/*noel css animation class*/
a.button {
	margin: 0 auto;
	padding: 1rem;
	background: linear-gradient(135deg, var(--a), var(--c), var(--b));
	color: var(--f);
	text-decoration: none;
}

.glowy {
	box-shadow: inset 0 0 20px transparent, 0 0 20px transparent;
	text-shadow: 1px 1px 2px transparent;
	transition: all 1250ms 100ms cubic-bezier(0.19, 1, 0.22, 1);
}

.glowy:hover {
	box-shadow: inset 0 0 20px var(--a), 0 0 20px #ffef34;
	text-shadow: 1px 1px 2px #ffef34;
}
html {
	min-width: 550px;
	position: relative;
}

